2009-01-05  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_cursor.c: (viaHWCursorInit), (viaUseHWCursorARGB),
	(viaUseHWCursor):
	* src/via_driver.c: (VIAScreenInit):

	Missed a couple of changes for the chipset specific
	cursors.  Moved chipset detection to HWInit.  Removed
	some extraneous debugging.

2009-01-04  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_cursor.c: (viaHWCursorInit), (viaCursorSetFB),
	(viaUseHWCursorARGB), (viaUseHWCursor), (viaLoadCursorImage),
	(viaSetCursorColors), (viaLoadCursorARGB):
	* src/via_driver.h:

	Okay I tried to cheat.  We need to have some chipset
	specific intelligence.  I have added this back into
	the initial test to check for HWCursor support.

2009-01-04  Jon Nettleton <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaInitXAA), (viaInitAccel):
	* src/via_crtc.c: (ViaSecondCRTCSetStartingAddress):
	* src/via_cursor.c: (viaHWCursorInit), (viaCursorSetFB),
	(viaCursorStore), (viaCursorRestore), (viaShowCursor),
	(viaHideCursor), (viaSetCursorPosition), (viaUseHWCursorARGB),
	(viaUseHWCursor), (viaLoadCursorImage), (viaSetCursorColors),
	(viaLoadCursorARGB):
	* src/via_dga.c: (VIADGASetMode):
	* src/via_driver.c: (VIAFreeRec), (VIASetupDefaultOptions),
	(VIAPreInit), (VIAEnterVT), (VIALeaveVT), (VIAScreenInit),
	(VIACloseScreen):
	* src/via_driver.h:
	* src/via_regs.h:

	This is a take at reworking HWCursor.  It works off the
	ttm_branch and the work done in the randr_branch.  It only needs
	marginal testing as HWCursor was already very broken.

2009-01-04  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_driver.c: (VIAMapMMIO), (VIAMapFB):

	Moved pVia->FrameBufferBase setting to within
	VIAMapFB where it was before being called without
	being set.

2009-01-04  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_driver.c: (VIAPreInit):

	Patch submitted by Robert Bridge to clean up compiler
        warnings.  Should close trac ticket #243.  Thanks
	RobbieAB.
